--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 
         <input type="text" id ="sender" placeholder="Ad">
         <input type="text" id ="message" placeholder="Mesaj">
-        <button id="submitBtn">Gonder</button>
+        <button id="submitBtn">Send</button>
     </div>
 
 
